Add some info to the level data chapter Tweak the covers Some updates to the level data notebooks

--- a/notebooks/Create Appendix File with Level Data and Plotted Enemy Sprites.ipynb
+++ b/notebooks/Create Appendix File with Level Data and Plotted Enemy Sprites.ipynb
@@ -683,46 +683,46 @@
     "\n",
     "byte_descriptions = {\n",
     "\"Level\" : \"\",\n",
-    "\"Byte 1\"  : \"Index into array for sprite color\",                            \n",
-    "\"Byte 10\" : \"Lo Ptr for an animation effect? (Doesn't seem to be used?)\",                   \n",
-    "\"Byte 11\" : \"Hi Ptr for an animation effect (Doesn't seem to be used?)?\",                   \n",
-    "\"Byte 12\" : \"some kind of rate limiting for attack wave\",                                   \n",
-    "\"Byte 13\" : \"Lo Ptr for a stage in wave data (never used).\",                                \n",
-    "\"Byte 14\" : \"Hi Ptr for a stage in wave data (never used).\",                                \n",
-    "\"Byte 15\" : \"Unused, see GetNewShipDataFromDataStore\",                                      \n",
-    "\"Byte 16\" : \"Update rate for attack wave\",                                                  \n",
-    "\"Byte 17\" : \"Lo Ptr to the wave data we switch to when first hit.\",                         \n",
-    "\"Byte 18\" : \"Hi Ptr to the wave data we switch to when first hit.\",                         \n",
-    "\"Byte 19\" : \"X Pos movement for attack ship.\",                                              \n",
-    "\"Byte 2\"  : \"Sprite value for the attack ship for the upper planet.\",                       \n",
-    "\"Byte 20\" : \"Y Pos movement pattern for attack ship.\",                                      \n",
-    "\"Byte 21\" : \"X Pos Frame Rate for Attack ship.\",                                            \n",
-    "\"Byte 22\" : \"Y Pos Frame Rate for Attack ship.\",                                            \n",
-    "\"Byte 23\" : \"Stickiness factor, does the enemy stick to the player\",                        \n",
-    "\"Byte 24\" : \"Does the enemy gravitate quickly toward the player when its hit?\",                  \n",
-    "\"Byte 25\" : \"Lo Ptr for another set of wave data.\",                                         \n",
-    "\"Byte 26\" : \"Hi Ptr for another set of wave data.\",                                         \n",
-    "\"Byte 27\" : \"Lo Ptr for another set of wave data.\",                                         \n",
-    "\"Byte 28\" : \"Hi Ptr for another set of wave data.\",                                         \n",
-    "\"Byte 29\" : \"Lo Ptr for Explosion animation.\",                                              \n",
-    "\"Byte 3\"  : \"Sprite value for the attack ship on the upper planet\",                       \n",
-    "\"Byte 30\" : \"Hi Ptr for Explosion animation.\",                                              \n",
-    "\"Byte 31\" : \"Lo Ptr for another set of wave data for this level.\",                          \n",
-    "\"Byte 32\" : \"Hi Ptr for another set of wave data for this level.\",                          \n",
-    "\"Byte 33\" : \"Unused.\",                                                                      \n",
-    "\"Byte 34\" : \"Unused, see GetNewShipDataFromDataStore.\",                                     \n",
-    "\"Byte 35\" : \"Does destroying this enemy increase the gilby's energy?.\",                     \n",
-    "\"Byte 36\" : \"Does colliding with this enemy decrease the gilby's energy?\",                  \n",
-    "\"Byte 37\": \"Is the ship a spinning ring, i.e. does it allow the gilby to warp?\",\n",
-    "\"Byte 38\": \"Number of waves in data.\",                                          \n",
-    "\"Byte 39\": \"Number of ships in wave.\",                                          \n",
-    "\"Byte 4\" : \"The animation frame rate for the attack ship.\",                                 \n",
-    "\"Byte 40\": \"Unused bytes.\",                                                     \n",
-    "\"Byte 5\" : \"Sprite for the attack ship for the lower planet.\",                        \n",
-    "\"Byte 6\" : \"Sprite value for the attack ship on lower planet\",                 \n",
-    "\"Byte 7\" : \"Whether a specific attack behaviour is used.\",                                  \n",
-    "\"Byte 8\" : \"Lo Ptr for an unused attack behaviour\",                                         \n",
-    "\"Byte 9\" : \"Lo and Hi Ptr for alternate enemy mode\",                                         \n",
+    "\"Byte 0\":\"Index into array for sprite color\",                                   \n",
+    "\"Byte 1\":\"First sprite value for the attack ship on the upper planet\",          \n",
+    "\"Byte 2\":\"Last sprite value for the attack ship on the upper planet\",           \n",
+    "\"Byte 3\":\"The animation frame rate for the attack ship.\",                       \n",
+    "\"Byte 4\":\"First sprite value for the attack ship on the lower planet\",          \n",
+    "\"Byte 5\":\"Last sprite value for the attack ship on the lower planet\",           \n",
+    "\"Byte 6\":\"Rate at which to switch to alternate enemy mode.\",                    \n",
+    "\"Byte 7\":\"Lo Ptr for alternate enemy mode\",                                     \n",
+    "\"Byte 8\":\"Hi Ptr for alternate enemy mode\",                                     \n",
+    "\"Byte 9\":\"textbf{Unused} Lo Ptr to an arbitrary run of Bytes 18-21.\",\n",
+    "\"Byte 10\":\"textbf{Unused} Hi Ptr to an arbitrary run of Bytes 18-21.\",\n",
+    "\"Byte 11\":\"textbf{Unused} Rate limite for use of Bytes 9 and 10.\",              \n",
+    "\"Byte 12\":\"textbf{Unused}\",                                                     \n",
+    "\"Byte 13\":\"textbf{Unused}\",                                                     \n",
+    "\"Byte 14\":\"Controls the rate at which new enemies are added.\",\n",
+    "\"Byte 15\":\"Update rate for switching to the level data in Bytes 16/17\",                                        \n",
+    "\"Byte 16\":\"Lo Ptr to wave data we switch to periodically.\",               \n",
+    "\"Byte 17\":\"Hi Ptr to wave data we switch to periodically.\",               \n",
+    "\"Byte 18\":\"X Pos movement for attack ship.\",                                    \n",
+    "\"Byte 19\":\"Y Pos movement pattern for attack ship.\",                            \n",
+    "\"Byte 20\":\"X Pos Frame Rate for Attack ship.\",                                  \n",
+    "\"Byte 21\":\"Y Pos Frame Rate for Attack ship.\",                                  \n",
+    "\"Byte 22\":\"Stickiness factor, does the enemy stick to the player\",              \n",
+    "\"Byte 23\":\"Does the enemy gravitate quickly toward the player when its hit?\",   \n",
+    "\"Byte 24\":\"Lo Ptr for second wave of attack ships.\",                            \n",
+    "\"Byte 25\":\"Hi Ptr for second wave of attack ships.\",                            \n",
+    "\"Byte 26\":\"Lo Ptr for third wave of attack ships.\",                             \n",
+    "\"Byte 27\":\"Hi Ptr for third wave of attack ships.\",                             \n",
+    "\"Byte 28\":\"Lo Ptr for Explosion animation.\",                                    \n",
+    "\"Byte 29\":\"Hi Ptr for Explosion animation.\",                                    \n",
+    "\"Byte 30\":\"Lo Ptr for another set of wave data for this level.\",                \n",
+    "\"Byte 31\":\"Hi Ptr for another set of wave data for this level.\",                \n",
+    "\"Byte 32\":\"Lo Ptr for fourth wave of attack ships.\",                            \n",
+    "\"Byte 33\":\"Hi Ptr for fourth wave of attack ships.\",                            \n",
+    "\"Byte 34\":\"Points for hitting the enemy.\",                                      \n",
+    "\"Byte 35\":\"Energy increase multiplier for hitting an enemy.\",\n",
+    "\"Byte 36\":\"Is the ship a spinning ring, i.e. does it allow the gilby to warp?\", \n",
+    "\"Byte 37\":\"Number of waves in data.\",                                           \n",
+    "\"Byte 38\":\"Number of ships in wave.\",                                           \n",
+    "\"Byte 39\":\"textbf{Unused} byte.\",                                               \n",
     "}\n",
     "\n",
     "adl = \"\\\\addlinespace\"\n",
