--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -12,12 +12,12 @@
 \begin{figure}[H]
     \centering
       \includegraphics[width=10cm]{src/bumph/sketch.png}%
-\caption*{Concept sketch for Iridis Alpha by Jeff Minter.}
+\caption*{Iinitial concept sketch for Iridis Alpha by Jeff Minter.}
 \end{figure}
 
 \vspace*{\fill}
 \textcopyright\ Rob Hogan 2022-2023, All Rights Reserved. \\
-'Iridis Alpha' \textcopyright\ Jeff Minter 1986.
+\textbf{Edition Date:} \today
 
 \doclicenseThis
 \thispagestyle{empty}%
