Update level data appendix

--- a/src/book.tex
+++ b/src/book.tex
@@ -481,7 +481,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 %\chapter*{Appendices}
 %\subfile{src/dev_diary} % draft
 %\subfile{src/sprite_appendix} % draft
-%\subfile{src/level_data_appendix} %draft
+\subfile{src/level_data_appendix} %draft
 %\subfile{src/planets_appendix} % draft
 %\subfile{src/music_appendix} % draft
 %\subfile{src/bonusphase_appendix} % draft
